# sombra

./: README.md  cmd.c  ls.c  rshell.yml  sombra.yml
RShell/: RShell.sln
RShell/RShell/: RShell.vcxproj  Source.cpp
RShell/RShell/x64/Debug/: RShell.exe.recipe  RShell.ilk  vc143.idb
RShell/RShell/x64/Debug/RShell.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RShell.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
client/: Cargo.toml  ls.c  raw.c
client/src/: icmp.rs  main.rs  persist.rs  util.rs  vars.rs
server/: Cargo.toml  Dockerfile  config.json  docker-compose.yml
server/src/: icmp.rs  main.rs  runtime.rs  vars.rs
