[package]
name = "magmaserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.20.0"
cursive_table_view = "0.14.0"
default-net = "0.11.0"
pnet = { version = "0.31.0", features = ["std"] }
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
